# various

./: .hgignore  .hgsub  .hgsubstate  EruBot.md  Parashoot2.md  ProjectHome.md  Prolepsis.md  Pybake2.md  poke.c
MooStart/: proMoo.vbp
a_star/: a_star.py  textgrid.py  textgrid1
bash_scripts/: hamachi  update-world
belleric/: belleric.pro  view.cpp  view.h
c/: erubix.c
clothsim/: Makefile  cloth.h  mycloth.c  opengl_stuff.c
curstar/: COMPILE  Makefile  audio.c  audio.h  main.c
duclone/: Makefile  dirfunc.c
eric/: Makefile  assignment1.c  dictionary.txt  makefile  server.c  threadpool.c  threadpool.h  vector.c  vector.h
eruipchg/: eruipchg.c  notes
erup2p/: client.py  filedrop.py  msgsock.py  network.py  server.py  svn-commit.tmp
eruutil/: Makefile  bit-test.c  bit.c  bit.h  erudebug.h  memnotchr.c  perlfunc.c  perlfunc.h  procmaps.c  procmaps.h  strrcasestr.c  test.c
gentoo/: overlay.xml
gstfind/: gstfind.c
libdemo/: Makefile  usematt.c
lifesdl/: Makefile  main.c
linelf/: Makefile  main.c
miniplay/trunk/: BUGS  Makefile  Makefile.am  Makefile.hardy  audio.c  conf.c  configure.ac  main.c  makedeb.sh  miniplay  miniplay.h  notify.c  tray.c
miniplay/trunk/DEBIAN/: control
moneypot-scripts/: checkout_last  copy_player
mp3clean/: Makefile  mp3clean.c  mp3clean.cpp  mp3test.cpp  mpegamm.cpp  mpegamm.h
mp3parse/: mp3parse.c
msgprot/: Makefile  client.c  error.c  error.h  network.c  network.h  server.c  server.h  tcpmsg.c  tcpmsg.h
parashoot/: Makefile  error.h  view.c
parashoot_sdl/: main.c
pascal/: AMENC.PAS  AccountPassword.pas  AccountPassword2.pas  Accountload.pas  Amenc.pas  BCHARGEN.PAS  BLARG.PAS  CHOPFEST.PAS  COBBLERS.PAS  ChangeArmy.pas  CharacterMenu.pas  CharacterStats.pas  Characterload.pas  Charmade.pas  CreateArmy.pas  DEC2BIN2.PAS  DECTOBIN.PAS  Dark.pas  Equipment.pas  FANCYTXT.PAS  FUNNY.PAS  Game_Screen.pas  Human.pas  Humanlist.pas  Info_alien.pas  Intro.pas  JOERULEZ.PAS  KDMG.PAS  MATHDEMO.PAS  MONSTER.PAS  Newaccount.pas  NotRight.pas  Opening.pas  Password.pas  Race.pas  Racenew.pas  Selection.pas  TIMING.PAS  Unit1.pas  VIDSHOP.PAS  (+1 more)
perl/: eruanno.txt  filetest.pl  hashreftest.pl  listmods.pl  md5test.pl  newkills.pl  perl.html  pingres.pl  protoping.pl  shitgen.pl  sumlines.pl  ua.pl
projects/cpfs/: Makefile.am  configure.ac  cpfs.c  cpfs.h  fsstat.py  mount.cpfs.c
projects/cpfs/src/: Makefile.am  cpfs.c  cpfs.h  mkfs.cpfs.c  mount.cpfs.c
public/: heredoc.sh  quote.sh
pvpecalc/: Makefile  (+1 more)
various/tiblet/: CMakeLists.txt  Makefile  control.in  readuriasync.hpp  symbols  tiblet.c  tiblet.cpp  tiblet.server
various/tiblet/source/: CMakeLists.txt  tiblet.c  tiblet.server
(+1513 files in other folders)
